mass change upload from lesson

--- a/navigation/index.html
+++ b/navigation/index.html
@@ -13,15 +13,42 @@
   </head>
   <body>
     <header>
-      <h1>Your Name</h1>
+      <div class="title">Your Name</div>
       <nav>
         <ul id="menu">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
+      <!-- when linking to other pages w/in same directory, nav looks like
+      <header>
+        <div class="title">Your Name</div>
+        <nav>
+          <ul id="menu">
+            <li><a href="/">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+      -->
       </nav>
     </header>
+    <main>
+      <section id="home">
+        <!-- All the Home section can be placed here. -->
+      </section>
+      <section id="about">
+        <!-- All the About section can be placed here. -->
+      </section>
+      <section id="portfolio">
+        <!-- All the Portfolio section can be placed here. -->
+      </section>
+      <section id="contact">
+        <!-- All the Contact section can be placed here. -->
+      </section>
+    </main>
   </body>
 </html>
